mise en place d'un useEffect() sur l'api

--- a/src/style.module.css
+++ b/src/style.module.css
@@ -3,16 +3,15 @@
   height: 100vh;
   padding: 25px;
   flex-direction: column;
+  background-color: black;
 }
 .header {
   flex: 1;
-  background-color: red;
+
 }
 .tv_show_detail {
   flex: 2;
-  background-color: blue;
 }
 .recommandations {
   flex: 3;
-  background-color: palevioletred;
 }
